fix: Color contrast a11y issues on homepage

--- a/src/components/InstallTabs/InstallTabs.scss
+++ b/src/components/InstallTabs/InstallTabs.scss
@@ -18,13 +18,13 @@
       position: relative;
       list-style: none;
       padding: 10px 12px;
-      background: var(--black8);
+      background: #515c62;
       cursor: pointer;
       width: 100%;
       text-align: center;
 
       &--selected {
-        background: var(--black9);
+        background: #1f272a;
         color: #fff;
         border-radius: 5px 5px 0 0;
       }
@@ -42,7 +42,7 @@
           left: 0;
           right: 0;
           bottom: -5px;
-          background: var(--black9);
+          background: #1f272a;
         }
       }
     }
