--- a/src/styles/install-tabs.scss
+++ b/src/styles/install-tabs.scss
@@ -22,7 +22,7 @@
     text-align: center;
 
     &--selected {
-      background: var(--black9);
+      background: #1f272a;
       color: #fff;
       border-radius: 5px 5px 0 0;
     }
